<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mntm_map"
          android:title="@string/navmenu_map"
        android:icon="@drawable/ic_map_black_24dp"/>
    <item android:id="@+id/mntm_all_events"
          android:title="@string/navmenu_all"
        android:icon="@drawable/ic_pin_drop_black_24dp"/>
    <item android:id="@+id/mntm_favourites"
          android:title="@string/navmenu_favourite"
          android:icon="@drawable/ic_favorite_black_24dp">
    </item>
    <item android:id="@+id/mntm_add_event"
        android:title="@string/navmenu_addevent"
        android:icon="@drawable/ic_playlist_add_black_24dp">
    </item>
    <item android:id="@+id/mntm_fixed_events"
          android:title="@string/navmenu_fixedevents"
          android:icon="@drawable/ic_playlist_add_check_black_24dp">
    </item>
    <item android:id="@+id/mntm_my_events"
          android:title="@string/navmenu_myevents"
          android:icon="@drawable/ic_event_seat_black_24dp">
    </item>


</menu>